Closed Bug 569821 Opened 14 years ago Closed 14 years ago

js compilation failure on mingw-w64

Categories

(Core :: JavaScript Engine, defect)

x86
Windows XP
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: jacek, Assigned: jacek)

References

Details

Attachments

(1 file)

Attached patch fix v1.0Splinter Review
I get following errors:

js/src/jsdhash.cpp:138:42: error: cast from 'const void*' to 'long unsigned int' loses precision
{standard input}: Assembler messages:
{standard input}:28: Error: Incorrect register `%rbx' used with `l' suffix

The first error is fixed by proper cast without loosing precision. The second error is fixed by using proper GetNativeStackBaseImpl implementation on mingw win64.

While I was at this I've also fixed a compiler warning:

js/src/jsfun.h:294:52: warning: converting to non-pointer type 'long long unsigned int' from NULL

The cast was in a wrong place causing implicit cast NULL->int in conditional expression. There are more similar warnings, but this one was esp. verbose.
Attachment #448991 - Attachment is patch: true
Attachment #448991 - Flags: review?(dvander)
Assignee: general → jacek
Blocks: 570342
Attachment #448991 - Flags: review?(dvander) → review+
http://hg.mozilla.org/mozilla-central/rev/d786e9162fd6
Status: NEW → RESOLVED
Closed: 14 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: