Bug 569821 - js compilation failure on mingw-w64 r=dvander